--- a/.env.template
+++ b/.env.template
@@ -1,16 +1,14 @@
-# Model settings
+LLM_MODEL = llama-3.2-1b-instruct
+HUGGINGFACE_TOKEN=HUGGINGFACE_API.
 TTS_MODEL=kokoro-v0_19-half.pth
 VOICE_NAME=af_nicole
-SPEED=1.0
-HUGGINGFACE_TOKEN=your_huggingface_token_here
-
+SPEED=1.2
 # LM Studio settings
 LM_STUDIO_URL=http://localhost:1234/v1
-DEFAULT_SYSTEM_PROMPT="You are a helpful assistant."
-LLM_MODEL=smollm-360m-instruct-v0.2
+DEFAULT_SYSTEM_PROMPT="You are a conversational AI. You response without markdown and special characters."
 MAX_TOKENS=4096
 LM_STUDIO_TEMPERATURE=0.7
-LM_STUDIO_STREAM=false
+LM_STUDIO_STREAM=True
 LM_STUDIO_RETRY_DELAY=0.5
 MAX_RETRIES=3
 
@@ -19,12 +17,12 @@ WHISPER_MODEL=openai/whisper-tiny.en
 VAD_MODEL=pyannote/segmentation-3.0
 
 # VAD settings
-VAD_MIN_DURATION_ON=0.1
-VAD_MIN_DURATION_OFF=0.1
+VAD_MIN_DURATION_ON=0.2
+VAD_MIN_DURATION_OFF=0.2
 
 # Audio settings
-CHUNK=200
-FORMAT=4
+CHUNK=1024
+FORMAT=pyaudio.paFloat32
 CHANNELS=1
 RATE=16000
 OUTPUT_SAMPLE_RATE=24000
@@ -33,4 +31,4 @@ SILENCE_THRESHOLD=0.01
 MAX_SILENCE_DURATION=1
 SPEECH_CHECK_TIMEOUT=0.1
 SPEECH_CHECK_THRESHOLD=0.02
-ROLLING_BUFFER_TIME=0.5 
+ROLLING_BUFFER_TIME=0.5
