--update clean up and documentation

--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,14 @@
-LLM_MODEL = llama-3.2-1b-instruct
-HUGGINGFACE_TOKEN=HUGGINGFACE_API.
+LLM_MODEL=llama-3.2-1b-instruct
+HUGGINGFACE_TOKEN= TOKEN_GOES_HERE
 TTS_MODEL=kokoro-v0_19-half.pth
 VOICE_NAME=af_nicole
 SPEED=1.2
 # LM Studio settings
 LM_STUDIO_URL=http://localhost:1234/v1
-DEFAULT_SYSTEM_PROMPT="You are a conversational AI. You response without markdown and special characters."
+DEFAULT_SYSTEM_PROMPT=You are a conversational AI. You response without markdown and special characters.
 MAX_TOKENS=4096
 LM_STUDIO_TEMPERATURE=0.7
-LM_STUDIO_STREAM=True
+LM_STUDIO_STREAM=true
 LM_STUDIO_RETRY_DELAY=0.5
 MAX_RETRIES=3
 
