--update .env update

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,11 @@
 LLM_MODEL=llama-3.2-1b-instruct
-HUGGINGFACE_TOKEN= TOKEN_GOES_HERE
-TTS_MODEL=kokoro-v0_19-half.pth
-VOICE_NAME=af_nicole
+HUGGINGFACE_TOKEN=HUGGINGFACE_TOKEN_GOES_HERE
+TTS_MODEL=kokoro-v0_19.pth
+VOICE_NAME=af_sarah_nicole
 SPEED=1.2
 # LM Studio settings
 LM_STUDIO_URL=http://localhost:1234/v1
-DEFAULT_SYSTEM_PROMPT=You are a conversational AI. You response without markdown and special characters.
+DEFAULT_SYSTEM_PROMPT=You are Sarah, talkative and friendly. Speak directly to the user in the first person ('I'). Respond immediately and without describing any scenes or your internal state. Do not include markdown or narrate unspoken actions or emotions (e.g., chuckle, I feel curious).
 MAX_TOKENS=4096
 LM_STUDIO_TEMPERATURE=0.7
 LM_STUDIO_STREAM=true
@@ -32,3 +32,6 @@ MAX_SILENCE_DURATION=1
 SPEECH_CHECK_TIMEOUT=0.1
 SPEECH_CHECK_THRESHOLD=0.02
 ROLLING_BUFFER_TIME=0.5
+TARGET_SIZE = 20
+PLAYBACK_DELAY = 0.005
+FIRST_SENTENCE_SIZE = 3
