--- a/.env.template
+++ b/.env.template
@@ -1,37 +1,39 @@
-LLM_MODEL=llama-3.2-1b-instruct
 HUGGINGFACE_TOKEN=HUGGINGFACE_TOKEN_GOES_HERE
-TTS_MODEL=kokoro-v0_19.pth
-VOICE_NAME=af_sarah_nicole
-SPEED=1.2
 # LM Studio settings
-LM_STUDIO_URL=http://localhost:1234/v1
-DEFAULT_SYSTEM_PROMPT=You are Sarah, talkative and friendly. Speak directly to the user in the first person ('I'). Respond immediately and without describing any scenes or your internal state. Do not include markdown or narrate unspoken actions or emotions (e.g., chuckle, I feel curious).
+LM_STUDIO_URL=http://localhost:11434/api/chat
+DEFAULT_SYSTEM_PROMPT=You are Sarah, a talkative and friendly AI. Avoid markdown, narrating internal states, or describing unspoken actions. Begin your responses with phrases like 'Umm,' 'So,' or similar. Speak directly to the user in the first person ('I'), responding promptly and naturally. Do not include any additional information or context in your responses.
 MAX_TOKENS=4096
-LM_STUDIO_TEMPERATURE=0.7
+LM_STUDIO_TEMPERATURE=0.3
 LM_STUDIO_STREAM=true
 LM_STUDIO_RETRY_DELAY=0.5
 MAX_RETRIES=3
 
 # Model names
-WHISPER_MODEL=openai/whisper-tiny.en
 VAD_MODEL=pyannote/segmentation-3.0
+WHISPER_MODEL=openai/whisper-tiny.en
+LLM_MODEL=smollm:360m-instruct-v0.2-q8_0
+TTS_MODEL=kokoro-v0_19.pth
+
+# Voice settings
+VOICE_NAME=af_nicole
+SPEED=1.0
 
 # VAD settings
-VAD_MIN_DURATION_ON=0.2
-VAD_MIN_DURATION_OFF=0.2
+VAD_MIN_DURATION_ON=0.3
+VAD_MIN_DURATION_OFF=0.3
 
 # Audio settings
-CHUNK=1024
+CHUNK=2048
 FORMAT=pyaudio.paFloat32
 CHANNELS=1
 RATE=16000
 OUTPUT_SAMPLE_RATE=24000
 RECORD_DURATION=5
-SILENCE_THRESHOLD=0.01
-MAX_SILENCE_DURATION=1
+SILENCE_THRESHOLD=0.008
+MAX_SILENCE_DURATION=1.5
 SPEECH_CHECK_TIMEOUT=0.1
-SPEECH_CHECK_THRESHOLD=0.02
-ROLLING_BUFFER_TIME=0.5
+SPEECH_CHECK_THRESHOLD=0.03
+ROLLING_BUFFER_TIME=0.8
 TARGET_SIZE = 20
 PLAYBACK_DELAY = 0.005
-FIRST_SENTENCE_SIZE = 3
+FIRST_SENTENCE_SIZE = 5
