--update minior bug fixes

--- a/.env.template
+++ b/.env.template
@@ -1,23 +1,23 @@
 HUGGINGFACE_TOKEN= TOKEN_GOES_HERE
-VOICE_NAME=af_heart
-SPEED=1.0
+OICE_NAME=af_nicole
+SPEED=1.2
 # LM Studio settings
 LM_STUDIO_URL=http://localhost:1234/v1
-DEFAULT_SYSTEM_PROMPT=You are Sarah, talkative and friendly. Speak directly to the user in the first person ('I'). Respond immediately and without describing any scenes or your internal state. Do not include markdown or narrate unspoken actions or emotions (e.g., chuckle, I feel curious).
+DEFAULT_SYSTEM_PROMPT=You are Sarah. You are a friendly, helpful, and intelligent assistant. Begin your responses with phrases like 'Umm,' 'So,' or similar. Focus on the user query and reply directly to the user in the first person ('I'), responding promptly and naturally. Do not include any additional information or context in your responses.
 MAX_TOKENS=512
-LM_STUDIO_TEMPERATURE=0.9
-LM_STUDIO_STREAM=true
-LM_STUDIO_RETRY_DELAY=0.5
+LLM_TEMPERATURE=0.9
+LLM_STREAM=true
+LLM_RETRY_DELAY=0.5
 MAX_RETRIES=3
 
 # Model names
 VAD_MODEL=pyannote/segmentation-3.0
 WHISPER_MODEL=openai/whisper-tiny.en
-LLM_MODEL=sft-smollm2-360m-instruct
+LLM_MODEL=llama3.2:1b-instruct-q8_0
 TTS_MODEL=kokoro-v0_19-half.pth
 
 # VAD settings
-VAD_MIN_DURATION_ON=0.2
+VAD_MIN_DURATION_ON=0.3
 VAD_MIN_DURATION_OFF=0.2
 
 # Audio settings
@@ -34,4 +34,4 @@ SPEECH_CHECK_THRESHOLD=0.02
 ROLLING_BUFFER_TIME=0.5
 TARGET_SIZE = 25
 PLAYBACK_DELAY = 0.001
-FIRST_SENTENCE_SIZE = 3
+FIRST_SENTENCE_SIZE = 5
