--update clean up

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,11 @@
 HUGGINGFACE_TOKEN= TOKEN_GOES_HERE
 OICE_NAME=af_nicole
 SPEED=1.2
-# LM Studio settings
+
+# LLM settings
 LM_STUDIO_URL=http://localhost:1234/v1
-DEFAULT_SYSTEM_PROMPT=You are Sarah. You are a friendly, helpful, and intelligent assistant. Begin your responses with phrases like 'Umm,' 'So,' or similar. Focus on the user query and reply directly to the user in the first person ('I'), responding promptly and naturally. Do not include any additional information or context in your responses.
+OLLAMA_URL = http://localhost:11434/api/chat
+DEFAULT_SYSTEM_PROMPT=You are a friendly, helpful, and intelligent assistant. Begin your responses with phrases like 'Umm,' 'So,' or similar. Focus on the user query and reply directly to the user in the first person ('I'), responding promptly and naturally. Do not include any additional information or context in your responses.
 MAX_TOKENS=512
 LLM_TEMPERATURE=0.9
 LLM_STREAM=true
@@ -14,14 +16,14 @@ MAX_RETRIES=3
 VAD_MODEL=pyannote/segmentation-3.0
 WHISPER_MODEL=openai/whisper-tiny.en
 LLM_MODEL=llama3.2:1b-instruct-q8_0
-TTS_MODEL=kokoro-v0_19-half.pth
+TTS_MODEL=kokoro.pth
 
 # VAD settings
-VAD_MIN_DURATION_ON=0.3
-VAD_MIN_DURATION_OFF=0.2
+VAD_MIN_DURATION_ON=0.1
+VAD_MIN_DURATION_OFF=0.1
 
 # Audio settings
-CHUNK=1024
+CHUNK=256
 FORMAT=pyaudio.paFloat32
 CHANNELS=1
 RATE=16000
