--update model update

--- a/.env.template
+++ b/.env.template
@@ -15,7 +15,7 @@ MAX_RETRIES=3
 # Model names
 VAD_MODEL=pyannote/segmentation-3.0
 WHISPER_MODEL=openai/whisper-tiny.en
-LLM_MODEL=llama3.2:1b-instruct-q8_0
+LLM_MODEL=hermes3:3b
 TTS_MODEL=kokoro.pth
 
 # VAD settings
