--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,7 @@ LM_STUDIO_URL=http://localhost:1234/v1
 OLLAMA_URL = http://localhost:11434/api/chat
 DEFAULT_SYSTEM_PROMPT=You are a friendly, helpful, and intelligent assistant. Begin your responses with phrases like 'Umm,' 'So,' or similar. Focus on the user query and reply directly to the user in the first person ('I'), responding promptly and naturally. Do not include any additional information or context in your responses.
 MAX_TOKENS=512
+NUM_THREADS=2
 LLM_TEMPERATURE=0.9
 LLM_STREAM=true
 LLM_RETRY_DELAY=0.5
@@ -15,7 +16,7 @@ MAX_RETRIES=3
 # Model names
 VAD_MODEL=pyannote/segmentation-3.0
 WHISPER_MODEL=openai/whisper-tiny.en
-LLM_MODEL=hermes3:3b
+LLM_MODEL=llama3.2:1b
 TTS_MODEL=kokoro.pth
 
 # VAD settings
@@ -36,4 +37,4 @@ SPEECH_CHECK_THRESHOLD=0.02
 ROLLING_BUFFER_TIME=0.5
 TARGET_SIZE = 25
 PLAYBACK_DELAY = 0.001
-FIRST_SENTENCE_SIZE = 5
+FIRST_SENTENCE_SIZE = 2
