--- a/.env.template
+++ b/.env.template
@@ -31,6 +31,7 @@ RATE=16000
 OUTPUT_SAMPLE_RATE=24000
 RECORD_DURATION=5
 SILENCE_THRESHOLD=0.01
+INTERRUPTION_THRESHOLD=0.02
 MAX_SILENCE_DURATION=1
 SPEECH_CHECK_TIMEOUT=0.1
 SPEECH_CHECK_THRESHOLD=0.02
