--- a/.env.template
+++ b/.env.template
@@ -16,7 +16,7 @@ MAX_RETRIES=3
 # Model names
 VAD_MODEL=pyannote/segmentation-3.0
 WHISPER_MODEL=openai/whisper-tiny.en
-LLM_MODEL=llama3.2:1b
+LLM_MODEL=qwen2.5:0.5b-instruct-q8_0
 TTS_MODEL=kokoro.pth
 
 # VAD settings
@@ -31,7 +31,7 @@ RATE=16000
 OUTPUT_SAMPLE_RATE=24000
 RECORD_DURATION=5
 SILENCE_THRESHOLD=0.01
-INTERRUPTION_THRESHOLD=0.02
+INTERRUPTION_THRESHOLD=0.01
 MAX_SILENCE_DURATION=1
 SPEECH_CHECK_TIMEOUT=0.1
 SPEECH_CHECK_THRESHOLD=0.02
