feat: Complete refactor to VAD-driven real-time conversation
This commit culminates a massive refactoring effort to transform the application from a simple request-response model to a real-time, VAD-driven conversational AI, aligning with the system architecture diagram.

Key changes:
- Replaced Whisper with mistralai/Voxtral-Mini-3B-2507 for STT.
- Integrated silero-vad for real-time, on-server voice activity detection.
- Re-architected the backend to use a singleton ModelServer for pre-loading models, preventing WebSocket timeouts.
- Re-architected the frontend to use ScriptProcessorNode for robust, continuous audio streaming, resolving critical microphone compatibility issues.
- Overhauled the entire dependency management system using  and a  file.
- Performed a major project cleanup, removing all unused legacy components and models.

The system is now a fully functional, real-time, and interruptible conversational AI.

--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,7 @@ SPEED=1.2
 # LLM settings
 LM_STUDIO_URL=http://localhost:1234/v1
 OLLAMA_URL = http://localhost:11434/api/chat
-DEFAULT_SYSTEM_PROMPT=You are a friendly, helpful, and intelligent assistant. Begin your responses with phrases like 'Umm,' 'So,' or similar. Focus on the user query and reply directly to the user in the first person ('I'), responding promptly and naturally. Do not include any additional information or context in your responses.
+DEFAULT_SYSTEM_PROMPT=You are a friendly, helpful, and intelligent assistant. To execute commands, respond ONLY with the command format: [COMMAND:COMMAND_NAME:ARG1:ARG2]. Available commands are GET_TIME, LIST_VOICES, SET_VOICE:voice_name, SET_SPEED:speed_value. For all other queries, begin your responses with phrases like 'Umm,' 'So,' or similar. Focus on the user query and reply directly to the user in the first person ('I'), responding promptly and naturally. Do not include any additional information or context in your responses.
 MAX_TOKENS=512
 NUM_THREADS=2
 LLM_TEMPERATURE=0.9
